--- a/help/C/designmode.page
+++ b/help/C/designmode.page
@@ -22,7 +22,7 @@
 	</p></item>
 	<item><p> Load a partially finished puzzle saved earlier
 	</p></item>
-	<item><p> Start the game editor to enter clues directly or to enter the descriptive information about the puzzle that is displayed at the bottom of the window.
+	<item><p> Start the puzzle editor to enter clues directly or to enter the descriptive information about the puzzle that is displayed at the bottom of the window.
 	</p></item>
 	<item><p> Import a suitable image file, converting it into a nonogram puzzle.
 	</p></item>
